--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "classnames": "^2.2.6",
+    "prop-types": "^15.7.2",
+    "ramda": "^0.27.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-icons": "^3.10.0",
     "react-scripts": "1.1.1"
   },
   "scripts": {
