--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "awesome-debounce-promise": "^2.1.0",
     "classnames": "^2.2.6",
     "prop-types": "^15.7.2",
     "ramda": "^0.27.0",
     "react": "^16.2.0",
+    "react-async-hook": "^3.6.1",
     "react-dom": "^16.2.0",
     "react-icons": "^3.10.0",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "use-constant": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
