--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "ramda": "^0.27.0",
     "react": "^16.2.0",
     "react-async-hook": "^3.6.1",
+    "react-color": "^2.18.1",
     "react-dom": "^16.2.0",
     "react-icons": "^3.10.0",
     "react-scripts": "1.1.1",
