--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-color": "^2.18.1",
     "react-dom": "^16.2.0",
     "react-icons": "^3.10.0",
-    "react-scripts": "1.1.1",
+    "react-scripts": "3.4.1",
     "use-constant": "^1.0.0"
   },
   "scripts": {
@@ -20,5 +20,17 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
